# bnet

./: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  models.rs  protocol.rs  utils.rs
src/admin/: main.rs
src/client/: main.rs  terminal.rs
src/server/: main.rs
