[package]
name = "bnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bnet_core = { path = "./crates/core" }

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "admin"
path = "src/admin/main.rs"

